# agentc_llama

./: CMakeLists.txt  Makefile  README.md  agent.conf  test.c
Inc/: agent.h  memory.h  tools.h
Src/: agent.c  memory.c  tools.c
example/: main.c  test_agent.c
